--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,8 @@ pyasn1==0.6.1
     # via rsa
 pytelegrambotapi==4.23.0
     # via -r requirements.in
+python-dotenv==1.0.1
+    # via -r requirements.in
 pytz==2024.2
     # via -r requirements.in
 requests==2.32.3
